# BC

./: .gitignore  CMakeLists.txt  ISPC Texture Compressor.sln  LICENSE  Makefile.linux32  Makefile.linux64
ispc_texcomp/: ASTC.cpp  BC.cpp  BC.def  BC.h  BPTC.cpp  ETC.cpp  KTexComp.cpp  KTexCompASTC.cpp  KTexCompBPTC.cpp  KTexCompETC.cpp  KTexCompS3TC.cpp  S3TC.cpp  ispc_texcomp.cpp  ispc_texcomp.def  ispc_texcomp.h  ispc_texcomp.vcxproj  ispc_texcomp.vcxproj.filters  ispc_texcomp_astc.cpp  kernel.ispc  kernel_astc.ispc  kernel_bptc.ispc  kernel_shared.isph
